--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -38,7 +38,7 @@ jobs:
       # the same job (as shown below).
       - export: export GREETING="Hello, world!"
       - hello: echo $GREETING
-      - slackus: meta set notification.slack.main.channels temp_joerg
+      - slackus: meta set notification.slack.main.message "foobar"
       - slackus2: meta set build.meta.notification.slack.main.channels temp_joerg
       # Metadata is a structured key/value storage of relevant information about a build. 
       # Metadata will be shared with subsequent builds in the same workflow.
